<resources>
    <string name="app_name">Home Brew Tracker</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="username">Username</string>
    <string name="registering">Registering</string>

    <!-- Global strings -->
    <string name="form_Select_Button">Select</string>
    <string name="form_One_Text">Mead</string>
    <string name="form_Two_Text">Wine</string>
    <string name="settings_Text">Settings</string>
    <string name="history_Text">History</string>
    <string name="submit_button">Submit</string>
    <string name="reminder_date_text">Reminder Date:</string>
    <string name="reminder_time_text">Reminder Time:</string>
    <string name="back">Back</string>

    <!-- Strings related to both forms -->
    <string name="date">Date: </string>
    <string name="specific_gravity">SG: </string>
    <string name="temperature">Degrees F:</string>
    <string name="batch">Batch #: </string>

    <!-- Strings related to form one -->
    <string name="mead">Mead Form</string>

    <!-- Strings related to form two -->
    <string name="wine">Wine Form</string>


    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_main2">Main2Activity</string>
</resources>
